# PDDL-2

./: Assignment2.py  README.md  finalgraph.dot  finalgraphSimplify.dot  finalgraph_simplified.dot  floydWarshal.py  floyd_test.py  floyd_warshal_matrix.csv  foo.csv  graph.py  mat_floyd.csv  matrix.csv  matrix.py  matrix_to_graph.py  me.dot  minimal.py  output.dot  output_raw.dot  plan.pddl  plan.py  pyproject.toml  requirements.txt  sidbro.py  t.py  temporalplan.pddl  test_dot.dot  test_dot_final.dot
stns/: match_plan_1.dot  match_plan_2.dot  match_plan_3.dot  match_plan_4.dot  test_plan.dot  test_plan2.dot  test_plan3.dot  tiny_stn.dot  transport_plan_1.dot  transport_plan_2.dot
test/: Assignment2.py  distance_matrix.csv  finalgraph_not_simplified.dot  finalgraph_simplified.dot  floyd_warshal_matrix.csv  output.dot  plan.pddl
