[tool.poetry]
name = "reasoning assignment 2"
version = "0.1.0"
description = ""
authors = ["Asish Binu Mathew <asishbm98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
numpy = "^1.23.5"
graphviz = "^0.20.1"
pydotplus = "^2.0.2"
networkx = "^2.8.8"
pydot = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
